Added credit to zariga. Fixed a source link

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -17,7 +17,7 @@
         "description": "A 13Kb game made for the <a href='http://2018.js13kgames.com/'>2018 js13k</a> gamejam about talking to AIs and confirming they're still fit to fulfil their functions or flag those that need to be brought offline.",
         "type": "game",
         "status": "done",
-        "source": "https://github.com/dosaki/seating-planner",
+        "source": "https://github.com/dosaki/the-analyser",
         "roles": [],
         "tags": []
     },
@@ -25,7 +25,7 @@
         "icon": "https://seating-space-planner.dosaki.net/seating-space-planner.jpg",
         "name": "Seating Space Planner",
         "link": "https://seating-space-planner.dosaki.net/",
-        "description": "A 13Kb game made for the <a href='http://2021.js13kgames.com/'>2021 js13k</a> gamejam about seating people on a wedding reception but making sure they don't get upset with each other.",
+        "description": "A 13Kb game made for the <a href='http://2021.js13kgames.com/'>2021 js13k</a> gamejam about seating people on a wedding reception but making sure they don't get upset with each other. Game idea and initial game-design by <a href='https://zarigasofia.artstation.com/'>Zariga</a>.",
         "type": "game",
         "status": "done",
         "source": "https://github.com/dosaki/seating-planner",
@@ -48,7 +48,7 @@
         "icon": "https://portrait-generator.dosaki.net/favicon.ico",
         "name": "Portrait Generator",
         "link": "https://portrait-generator.dosaki.net/",
-        "description": "Portrait generator. Extracted from my <a href='https://seating-space-planner.dosaki.net/'>Seating Space Planner</a> game.",
+        "description": "Portrait generator. Components for characters by <a href='https://zarigasofia.artstation.com/'>Zariga</a>. Extracted from my <a href='https://seating-space-planner.dosaki.net/'>Seating Space Planner</a> game.",
         "type": "tool",
         "status": "active",
         "source": "https://github.com/dosaki/portrait-generator",
