--- a/.github/workflows/build-deployment.yml
+++ b/.github/workflows/build-deployment.yml
@@ -2,7 +2,7 @@ name: build-artifacts
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   non-conditional-step-to-make-this-valid:
