--- a/.github/workflows/build-deployment.yml
+++ b/.github/workflows/build-deployment.yml
@@ -41,7 +41,7 @@ jobs:
         run: npm install
 
       - name: Build website
-        run: npm build
+        run: npm run build
 
       - name: Terraform Init
         run: |
