--- a/.github/workflows/build-deployment.yml
+++ b/.github/workflows/build-deployment.yml
@@ -23,7 +23,7 @@ jobs:
       DEPLOYMENT_ENV: production
       NODE_OPTIONS: --openssl-legacy-provider
       AWS_DEFAULT_REGION: eu-west-1
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
       - name: Checkout
